--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=u1604615_default
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=u1604615_default
+DB_PASSWORD=Webex123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
